--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="HarambeeCore Simulation Dashboard" />
     <title>HarambeeCore</title>
   </head>
-  <body class="bg-gray-100 text-gray-900">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
